--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/nathanfaucett/rs-event_emitter.git"
 homepage = "https://github.com/nathanfaucett/rs-event_emitter"
+
+
+[dependencies]
+hash_map = {git = "https://github.com/nathanfaucett/rs-hash_map.git"}
+insert = {git = "https://github.com/nathanfaucett/rs-insert.git"}
+map = {git = "https://github.com/nathanfaucett/rs-map.git"}
